atualizacao do portfolio

--- a/styles.css
+++ b/styles.css
@@ -478,7 +478,7 @@ body {
     height: 500px;
 
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     flex-direction: row;
 }
 
@@ -493,7 +493,7 @@ body {
     background:var(--color-white); 
 
     display: flex;
-    align-items: center;
+    align-items:center;
     flex-direction: column;
 
     border-radius: 20px;
